objects/CRMforNonProfit__Transaction__c.object
<CustomObject>
    <fields>
        <fullName>CRMforNonProfit__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Bank_Account_Name__c</fullName>
        <label>Bank Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Card_Type__c</fullName>
        <label>Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VISA</fullName>
                </value>
                <value>
                    <fullName>Maestro</fullName>
                </value>
                <value>
                    <fullName>MasterCard</fullName>
                </value>
                <value>
                    <fullName>VisaElectron</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Corporate_Donation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporate Donation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Darujme_ID__c</fullName>
        <description>Identifikátor transakce v systému darujme</description>
        <label>Darujme ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Darujme_cz_Custom_ID__c</fullName>
        <label>Darujme.cz Custom ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Darujme_cz_ID__c</fullName>
        <label>Darujme.cz ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Darujme_cz_Received_Date__c</fullName>
        <label>Darujme.cz Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Darujme_cz_Sent_Date__c</fullName>
        <label>Darujme.cz Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Darujme_cz_Status__c</fullName>
        <label>Darujme.cz Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Fio_Bank_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fio Bank Account</label>
        <referenceTo>CRMforNonProfit__Fio_Bank_Account__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Inbound_Account_Num__c</fullName>
        <description>Z účtu</description>
        <inlineHelpText>Z účtu</inlineHelpText>
        <label>Inbound Account Num.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Inbound_Email__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates whether and from which Inbound Email the transaction was created</description>
        <label>Inbound Email</label>
        <referenceTo>CRMforNonProfit__InboundEmailRecord__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Manual_Job_Timestamp__c</fullName>
        <label>Manual Job Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Outbound_Account_Num__c</fullName>
        <description>Na účet</description>
        <inlineHelpText>Na účet</inlineHelpText>
        <label>Outbound Account Num.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Pledge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pledge</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Real_Amount__c</fullName>
        <label>Real Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Recurrent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recurrent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Sent_By__c</fullName>
        <label>Sent By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Source_Account_Number__c</fullName>
        <label>Source Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Specific_Symbol__c</fullName>
        <label>Specific Symbol</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Target_Account_Number__c</fullName>
        <label>Target Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Transaction_Amount__c</fullName>
        <label>Transaction Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Transaction_Comment__c</fullName>
        <label>Transaction Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Transaction_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Transaction External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Transaction_Pledge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Pledge</label>
        <referenceTo>CRMforNonProfit__Pledge__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Transaction_Status__c</fullName>
        <label>Transaction Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pledged</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Transferred</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Transaction_Type__c</fullName>
        <description>Typ transakce. Do součtů na kontaktech a firmách jsou započítávány pouze "peněžní dar" a "nepeněžní dar".</description>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>peněžní dar</fullName>
                    <default>true</default>
                    <label>peněžní dar</label>
                </value>
                <value>
                    <fullName>nepeněžní dar</fullName>
                </value>
                <value>
                    <fullName>členský příspěvek</fullName>
                </value>
                <value>
                    <fullName>dotace/grant</fullName>
                </value>
                <value>
                    <fullName>protiplnění</fullName>
                </value>
                <value>
                    <fullName>ostatní</fullName>
                </value>
                <value>
                    <fullName>Platba za zboží</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Variable__c</fullName>
        <label>Variable</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__eShopOrderId__c</fullName>
        <description>order id from Eshop</description>
        <externalId>true</externalId>
        <label>eShopOrderId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Transaction</label>
    <listViews>
        <fullName>CRMforNonProfit__All</fullName>
        <columns>NAME</columns>
        <columns>CRMforNonProfit__Campaign__c</columns>
        <columns>CRMforNonProfit__Contact__c</columns>
        <columns>CRMforNonProfit__Transaction_Amount__c</columns>
        <columns>CRMforNonProfit__Transaction_Status__c</columns>
        <columns>CRMforNonProfit__Transaction_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CRMforNonProfit__Source_Account_Number__c</columns>
        <columns>CRMforNonProfit__Variable__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CRMforNonProfit__Contact__c</field>
            <operation>notEqual</operation>
            <value>Neznámý kontakt</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T-{000000}</displayFormat>
        <label>Transaction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>